--- a/about.css
+++ b/about.css
@@ -163,7 +163,7 @@
 }
 
 
-@media (max-width: 375px) {
+@media (min-width: 768px) and (max-width: 1440px) {
     .box-about {
         padding: 1rem
     }
@@ -189,3 +189,22 @@
         margin: 1rem;
     }
 }
+
+
+/* @media (min-width: 768px) and (max-width: 1440px) {
+    .box-about {
+        padding: 1.8rem;
+    }
+
+    .box-about h3 {
+        margin: 2rem 1rem;
+    }
+
+    .box-about h4 {
+        margin: 1.5rem
+    }
+
+    .section-subtitle p {
+        font-size: 2.5rem;
+    }
+} */
